@@ -1,5 +1,8 @@
 2002-11-25    <smulloni@smullbola.smullyan.org>
 
+	* pylibs/formlib/views.py (ViewableForm.handleError): made it
+	work with FormError lists.
+
 	* pylibs/formlib/validates.py: changed the validation routines
 	to use FormError lists.
 
